trunk/Archive2/b3/b08b3f6a7ec5c8/output
main.cpp:6:19: error: invalid use of non-static data member 'a'
    int a = A<1>::a;
            ~~~~~~^
1 error generated.
